--- a/mystyle.css
+++ b/mystyle.css
@@ -1,15 +1,27 @@
 body {
-	text-align: justify;
+    text-align: justify;
     font-family: "Georgia";
     background-image: url("background2.png");
     background-size: 1500px;
     margin: 60px;
 }
 
-p {
-	background-color: white;
-	padding: 20px;
-	margin: 40px;
-	opacity: .45;
+a:link {
+    text-decoration: none;
 }
 
+a:visited {
+    text-decoration: none;
+}
+
+p {
+    background-color: white;
+    padding: 20px;
+    margin: 40px;
+    opacity: .45;
+}
+
+footer {
+    opacity: .2;
+    text-align: center;
+}
