--- a/mystyle.css
+++ b/mystyle.css
@@ -8,10 +8,12 @@ body {
 
 a:link {
     text-decoration: none;
+    color: black;
 }
 
 a:visited {
     text-decoration: none;
+    color: black;
 }
 
 p {
