--- a/absent_style.css
+++ b/absent_style.css
@@ -1,14 +1,12 @@
 body {
-    font-size: 120px;
+    font-size: 50px;
     font-family: "Anton";
     background-color: #040205;
-    max-width: 500px;
+    max-width: 800px;
     margin: auto;
     padding-top: 40px;
     justify-content: center;
-}
-
-.class {
+    color: pink;
 }
 
 a:link { 
@@ -17,4 +15,8 @@ a:link {
 
 a:visited { 
   color: pink;
+}
+
+h2 {
+	color: lightpink;
 }
