--- a/absent_style.css
+++ b/absent_style.css
@@ -1,10 +1,10 @@
 body {
-    font-size: 50px;
+    font-size: 100px;
     font-family: "Anton";
     background-color: #040205;
-    max-width: 800px;
+    max-width: 500px;
     margin: auto;
-    padding-top: 40px;
+    padding: 5%;
     justify-content: center;
     color: pink;
 }
