--- a/absent_style.css
+++ b/absent_style.css
@@ -1,22 +1,21 @@
 body {
-    font-size: 100px;
+    font-size: 150px;
     font-family: "Anton";
-    background-color: #040205;
-    max-width: 500px;
-    margin: auto;
-    padding: 5%;
-    justify-content: center;
+    background-color: black;
     color: pink;
+    background-image: url("background.png");
+    background-size: 75%;
+    padding-left: 20%;
+    padding-right: 10%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    max-width: 80%;
+    margin: auto;
 }
 
 a:link { 
-  color: pink;
+  color: #f484be;
 }
 
 a:visited { 
-  color: pink;
-}
-
-h2 {
-	color: lightpink;
-}
+  color: #f484be;
