--- a/absent_style.css
+++ b/absent_style.css
@@ -1,16 +1,5 @@
 body {
-    font-size: 150px;
-    font-family: "Anton";
-    background-color: black;
-    color: pink;
-    background-image: url("background.png");
-    background-size: 75%;
-    padding-left: 20%;
-    padding-right: 10%;
-    padding-top: 5%;
-    padding-bottom: 5%;
-    max-width: 80%;
-    margin: auto;
+    font-family: Georgia;
 }
 
 a:link { 
