--- a/absent_style.css
+++ b/absent_style.css
@@ -1,41 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 body {
-	background-image: url("backgroundf.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-color: white;
+    background-image: url("backgroundf.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: white;
 }
 
 .title {
-	font-size:16px;
-	color:black;
-	font-family:Georgia;
-	text-align:left;
-	width:80%;
-	position:absolute;
-	z-index: 1;
-	height:64px;
-	margin-left:2%;
+    font-size: 16px;
+    color: black;
+    font-family: "Georgia";
+    text-align: left;
+    width: 80%;
+    position: absolute;
+    z-index: 1;
+    height: 64px;
+    margin-left: 2%;
 }
 
 /* unvisited link */
 a:link {
-  color: black;
+    color: black;
 }
 
 /* visited link */
 a:visited {
-  color: black;
+    color: black;
 }
 
 /* mouse over link */
 a:hover {
-  color: blue;
+    color: blue;
 }
 
 /* selected link */
 a:active {
-  color: blue;
+    color: blue;
 }
-
