--- a/absent_style.css
+++ b/absent_style.css
@@ -20,7 +20,8 @@ body {
     justify-content:center;
     text-align:center;
     background-color:white;
-    padding:2%;
+    padding:4%;
+    padding-top:2%;
 }
 
 .header {
