--- a/absent_style.css
+++ b/absent_style.css
@@ -58,13 +58,13 @@ a:hover {
 }
 
 h1 {
-  font-family:Arial Black;
+  font-family:Arial Black, Archivo Black;
 }
 
 h3 {
-  font-family:Arial Black;
+  font-family:Arial Black, Archivo Black;
 }
 
 h4 {
-  font-family:Arial Black;
+  font-family:Arial Black, Archivo Black;
 }
