broken sans serif?

--- a/absent_style.css
+++ b/absent_style.css
@@ -58,13 +58,13 @@ a:hover {
 }
 
 h1 {
-  font-family:Arial Black, Lato;
+  font-family:Arial Black, Lato, sans-serif;
 }
 
 h3 {
-  font-family:Arial Black, Lato;
+  font-family:Arial Black, Lato, sans-serif;
 }
 
 h4 {
-  font-family:Arial Black, Lato;
+  font-family:Arial Black, Lato, sans-serif;
 }
