--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,5 +2,11 @@
     {% if page.title == 'Home' %}
         <h1>{{ site.title }}</h1>
         <p>{{site.description}}</p>
+        <br>
+        <br>
+    {% endif %}
+    {% if page.title != 'Home' %}
+        <p><a href="/index.html">home</a></p>
+        <br>
     {% endif %}
 </header>
