--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,8 @@
     {% if page.title == 'Home' %}
         <h1>{{ site.title }}</h1>
         <p>{{site.description}}</p>
-        <br>
+        <br><br><br>
+        <p><a href="/Writing">Writing</a> | <a href="/Factchecking">Fact-checking</a></p>
     {% endif %}
     {% if page.title != 'Home' %}
         <p><a href="/index.html">home</a></p>
